@@ -13,6 +13,7 @@ changes made.  See document footer for additional details.
 --- 202X-XX-XX  Release 7.3X.X                                     ---
 ----------------------------------------------------------------------
 
+* added ambient occlusion example to rt manual pages - Sean Morrison
 * added shipping container example geometry model - Josh Baker
 * added traffic light example geometry model - Chris McGregor
 * improved rtwizard command-line option reporting - Sean Morrison
